--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -5,10 +5,10 @@ Fonts are separated by a & */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
-  --accent2-color: white;
+  --primary-color: #d5ce92   ;
+  --secondary-color: #c0b874 ;
+  --accent1-color: #58574b;
+  --accent2-color: #ddded3;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "IM Fell French Canon";
