--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -15,14 +15,14 @@ Fonts are separated by a & */
   --paragraph-font: Lato, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #d5ce92;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
+  --headline-color-on-white: #58574b;  /* headlines on a white background */ 
+  --headline-color-on-color: #58574b; /* headlines on a colored background */ 
   --paragraph-color-on-white: #58574b; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
   --paragraph-background-color: #d5ce92  ;
   --nav-link-color: #58574b;
   --nav-background-color: #c0b874;
-  --nav-hover-link-color: white;
+  --nav-hover-link-color: #58574b;
   --nav-hover-background-color: #58574b;
 }
 
