--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -11,7 +11,7 @@ Fonts are separated by a & */
   --accent2-color: #ddded3;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: McLaren;
+  --heading-font: "McLaren";
   --paragraph-font: "Noto Sans Cherokee", Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
