--- a/aboutme/styles/styles.css
+++ b/aboutme/styles/styles.css
@@ -17,12 +17,11 @@ h1 {
 }
 
 img {
-    width: 800px;
-    border: 4px solid steelblue;
+    width: 80%;
 }
 
 p {
-    padding: 10px;
+    width: 80%;
 }
 
 footer {
