--- a/aboutme/styles/styles.css
+++ b/aboutme/styles/styles.css
@@ -18,7 +18,7 @@ h1 {
 }
 
 img {
-    width: 30%;
+    width: 80%;
 }
 
 p {
@@ -37,4 +37,7 @@ footer {
 #active {
     background-color: white;
     color: steelblue;
+}
+* {
+    border: 2px solid blue;
 }
