--- a/aboutme/styles/styles.css
+++ b/aboutme/styles/styles.css
@@ -1,10 +1,8 @@
-body {
-    text-align: center;
-}
 
 nav {
     background-color: steelblue;
     padding: 10px;
+    text-align: center;
 }
 
 a {
@@ -15,10 +13,13 @@ a {
 
 h1 {
     color: steelblue;
+    text-align: center;
 }
 
 img {
     width: 80%;
+    display: block;
+    margin: 0 auto;
 }
 
 p {
@@ -28,6 +29,7 @@ p {
 footer {
     background-color: steelblue;
     color: white;
+    text-align: center;
 }
 .main-para {
     font-size: 1.5em;
