--- a/aboutme/styles/styles.css
+++ b/aboutme/styles/styles.css
@@ -35,7 +35,8 @@ footer {
     font-size: 1.5em;
     line-height: 1.5em;
     width: 80%;
-    margin: 0 auto;
+    margin: 50px auto;
+    text-align: center;
 }
 
 #active {
