--- a/aboutme/styles/styles.css
+++ b/aboutme/styles/styles.css
@@ -30,6 +30,7 @@ footer {
     background-color: steelblue;
     color: white;
     text-align: center;
+    padding: 10px;
 }
 .main-para {
     font-size: 1.5em;
@@ -42,4 +43,8 @@ footer {
 #active {
     background-color: white;
     color: steelblue;
+}
+footer p {
+    font-size: 20px;
+    margin: 20px auto;
 }
