--- a/aboutme/styles/stylesnelson.css
+++ b/aboutme/styles/stylesnelson.css
@@ -1,3 +1,14 @@
 body{
-    background-color: palevioletred;
+    background-color: pink;
+}
+
+nav {
+    padding: 10px;
+    text-align: center;
+}
+
+a {
+    color: white;
+    padding: 10px;
+    font-size: 1.5em;
 }
