--- a/aboutme/styles/stylesnelson.css
+++ b/aboutme/styles/stylesnelson.css
@@ -7,8 +7,7 @@ nav {
     text-align: center;
 }
 
-a {
+h1 {
+    text-align: center;
     color: white;
-    padding: 10px;
-    font-size: 1.5em;
 }
