--- a/aboutme/styles/stylesnelson.css
+++ b/aboutme/styles/stylesnelson.css
@@ -32,7 +32,8 @@ img {
 }
 
 main {
-    width: 80%;
+    width: 60%;
+    
 }
 
 h2 {
@@ -42,6 +43,12 @@ h2 {
 
 footer {
     text-align: center;
+    padding: 10px;
+}
+
+footer p {
+    font-size: 20px;
+    margin: 20px auto;
 }
 
 * {
