--- a/aboutme/styles/stylesnelson.css
+++ b/aboutme/styles/stylesnelson.css
@@ -42,13 +42,12 @@ h2 {
 }
 
 footer {
-    text-align: center;
-    padding: 10px;
+    display: block;
 }
-
 footer p {
     font-size: 20px;
     width: 60%;
+    text-align: center; 
 }
 
 * {
