--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -2,3 +2,23 @@
     max-width: 1600px;
     margin: 0 auto;
 }
+
+nav a {
+    text-align: center;
+}
+
+#hero-msg h1 {
+    text-align: center;
+}
+
+#hero-msg h4 {
+    text-align: center;
+}
+
+.button-box {
+    text-align: center;
+}
+
+main section {
+    text-align: center;
+}
