--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -37,10 +37,21 @@ main section {
 
 #background {
     height: 725px;
+    background-color: #d5ce92;
 }
 
 .book, .join {
     background-color: #d5ce92;
 }
 
+.book:hover, .join:hover {
+    background-color: #58574b;
+}
 
+.msg {
+    background-color: #58574b;
+}
+
+footer {
+    background-color: #c0b874;
+}
