--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -19,6 +19,7 @@ nav a:hover {
 nav a {
     text-align: center;
     color: #58574b;
+    text-decoration: none;
 }
 
 #hero-msg h1 {
@@ -44,6 +45,7 @@ main section {
 
 .book, .join {
     background-color: #d5ce92;
+    text-decoration: none;
 }
 
 .book:hover, .join:hover {
@@ -68,8 +70,17 @@ footer {
     color: #58574b;
 }
 
+footer p {
+    font-size: 1.2em;
+}
+
+footer p a:hover {
+    text-decoration: underline;
+}
+
 footer a {
     color: #58574b;
+    text-decoration: none;
 }
 
 footer a:hover {
