--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -22,11 +22,7 @@ nav a {
     text-decoration: none;
 }
 
-#hero-msg h1 {
-    text-align: center;
-}
-
-#hero-msg h4 {
+#hero-msg h1, #hero-msg h4 {
     text-align: center;
 }
 
