--- a/aboutme/styles/styles.css
+++ b/aboutme/styles/styles.css
@@ -3,23 +3,27 @@ nav {
     background-color: steelblue;
     padding: 10px;
     text-align: center;
+    padding: 25px;
 }
 
 a {
     color: white;
     padding: 10px;
     font-size: 1.5em;
+    padding: 25px;
 }
 
 h1 {
     color: steelblue;
     text-align: center;
+    margin: 50px 0;
 }
 
 img {
     width: 80%;
     display: block;
     margin: 0 auto;
+    border: 4px solid steelblue;
 }
 
 p {
@@ -47,8 +51,12 @@ footer {
 footer p {
     font-size: 20px;
     margin: 20px auto;
+    padding: 25px;
 }
 a:hover {
     background-color: white;
     color: steelblue;
+}
+body{
+    margin: 0;
 }
