--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -9,7 +9,14 @@ body {
 }
 
 header {
-    background-color: #c0b874;
+    display: grid;
+    grid-template-columns: 150px auto;
+    background-color: rgb(192, 184, 116);opacity: 0.9;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
 }
 
 nav a:hover {
@@ -31,6 +38,25 @@ nav a {
 
 #hero-msg h1, #hero-msg h4 {
     text-align: center;
+    color: #ddded3;
+}
+
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
 }
 
 .button-box {
@@ -48,6 +74,11 @@ main section img {
 #background {
     height: 725px;
     background-color: #d5ce92;
+}
+
+.home-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 
 .book, .join {
@@ -69,6 +100,9 @@ main section img {
     background-color: #58574b;
     font-size: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 
 .msg h2 {
@@ -93,6 +127,9 @@ footer {
     color: #58574b;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 footer p {
@@ -142,6 +179,8 @@ h4 {
 
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 .rivers-card, .camping-card, .rapids-card {
@@ -150,12 +189,85 @@ h4 {
 
 .card-img {
     border: 10px solid #58574b;
+    transition: .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
 }
 
 .mountains {
     margin-bottom: 200px;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img, .mountains {
+    width: 100%;
 }
 
 #background {
     margin-bottom: 100px;
+    grid-column: 1/11;
+    grid-row: 4/9;
+}
+
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
