--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -230,6 +230,124 @@ h4 {
     grid-row: 2/3;
 }
 
+#heroAdv {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-top: 50px;
+}
+.adv-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+.trip1-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+    border-color: #58574b;
+    border-style: solid;
+}
+.trip2-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+    border-color: #58574b;
+    border-style: solid;
+}
+.trip3-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+    border-color: #58574b;
+    border-style: solid;
+}
+.trip1-card, .trip2-card, .trip3-card {
+    margin: 100px 0;
+}
+#heroAdv-msg h4 {
+    text-align: center;
+}
+#heroAdv-msg {
+    width: 500px;
+    margin: auto;
+}
+
+form {
+    /* Center the form on the page */
+    margin: 0 auto;
+    width: 400px;
+    /* Form outline */
+    padding: 1em;
+    border: 1px solid #ccc;
+    border-radius: 1em;
+  }
+  
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  form li + li {
+    margin-top: 1em;
+  }
+  
+  label {
+    /* Uniform size & alignment */
+    display: inline-block;
+    width: 90px;
+    text-align: right;
+  }
+  
+  input,
+  textarea {
+    /* To make sure that all text fields have the same font settings
+       By default, textareas have a monospace font */
+    font: 1em sans-serif;
+  
+    /* Uniform text field size */
+    width: 300px;
+    box-sizing: border-box;
+  
+    /* Match form field borders */
+    border: 1px solid #999;
+  }
+  
+  input:focus,
+  textarea:focus {
+    /* Additional highlight for focused elements */
+    border-color: #000;
+  }
+  
+  textarea {
+    /* Align multiline text fields with their labels */
+    vertical-align: top;
+  
+    /* Provide space to type some text */
+    height: 5em;
+  }
+  
+  .button {
+    /* Align buttons with the text fields */
+    padding-left: 90px; /* same size as the label elements */
+  }
+  
+  button {
+    /* This extra margin represent roughly the same space as the space
+       between the labels and their text fields */
+    margin-left: 0.5em;
+  }
+
+  #feedback {
+    background-color: antiquewhite;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: .5em;
+    /* make this element invisible until we are ready for it */
+    display: none;      
+}
+.moveDown {
+    margin-top: 3em;
+}
+
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
@@ -270,41 +388,4 @@ h4 {
     footer {
         margin-top: 25px;
     }
-}
-#heroAdv {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    margin-top: 50px;
-}
-.adv-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-}
-.trip1-card {
-    grid-column: 2/4;
-    grid-row: 2/3;
-    border-color: #58574b;
-    border-style: solid;
-}
-.trip2-card {
-    grid-column: 5/7;
-    grid-row: 2/3;
-    border-color: #58574b;
-    border-style: solid;
-}
-.trip3-card {
-    grid-column: 8/10;
-    grid-row: 2/3;
-    border-color: #58574b;
-    border-style: solid;
-}
-.trip1-card, .trip2-card, .trip3-card {
-    margin: 100px 0;
-}
-#heroAdv-msg h4 {
-    text-align: center;
-}
-#heroAdv-msg {
-    width: 500px;
-    margin: auto;
 }
